[ES6 Modules] Fix importing a module with different specifiers

ModuleRequestsFromScriptModule() can contain the same URL
multiple times if a module is imported multiple times
with different specifiers.

Previously, InitiateInternalModuleScriptGraphFetching() was
invoked multiple times for the same URL, and thus caused
DCHECK() to fail or module loading to never finish.

This CL adds the URL of imported modules to |visited_set_|
while iterating ModuleRequestsFromScriptModule(), not in
InitiateInternalModuleScriptGraphFetching(), to avoid the duplicated
InitiateInternalModuleScriptGraphFetching() calls.
This is also what is done in the spec.

Bug: 797867
Change-Id: I583033ac3f168b5b50bdf6d49ae9563b5eda36ea
Reviewed-on: https://chromium-review.googlesource.com/847296
Commit-Queue: Hiroshige Hayashizaki <hiroshige@chromium.org>
Reviewed-by: Kouhei Ueno <kouhei@chromium.org>
Cr-Commit-Position: refs/heads/master@{#527141}
Former-commit-id: 854561be02be15f3a075d0ef4a755c0953db21bd